Fixed spacing on character containers

--- a/styles/sections/main.css
+++ b/styles/sections/main.css
@@ -96,20 +96,20 @@
   border-radius: var(--round-edge);
 }
 
-.character-name {
+.character-profile {
   padding: 0;
-  height: 70px;
+  margin: 0;
+  height: 7rem;
+}
+
+.character-profile h3 {
+  margin: 12px 0 2px 0;
 }
 
 .character-title {
-  height: 30px;
-  margin-bottom: 50px;
-}
-
-.character-title span {
   margin: 0;
   padding: 0;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .character-view-button {
